# student_library

./: .gitignore  pyproject.toml  readme.md  requirements.txt  Диаграмма без названия.drawio
app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py  widgets.py
app/migrations/: 0001_initial.py  0002_userfavorite.py  0003_alter_userfavorite_book_alter_userfavorite_user_and_more.py
app/templates/: add_book.html  base_template.html  book_list.html  create_syllabus.html  index.html  syllabus.html  test.html  user_library.html
auth/: forms.py  urls.py  views.py
auth/templates/: register.html
auth/templates/registration/: login.html  register_done.html
base/: celery.py  settings.py  urls.py
utils/: exel_parse.py  google_api.py
